Add Kronecker Product Factorization (arXiv:2510.25292) to Matrix Factorization Jungle

--- a/index.html
+++ b/index.html
@@ -892,7 +892,9 @@
                 <div>
                     <p class="description"><strong>Matrix factorization view:</strong> Given data matrix A, learn unknown dictionary D (columns normalized ||d<sub>j</sub>||<sub>2</sub>=1) and unknown sparse codes X (||x<sub>i</sub>||<sub>0</sub> &le; k). Dictionary can be overcomplete (more atoms than dimensions). Alternates between sparse coding (fix D, solve for X) and dictionary update.</p>
                     <div class="impl-grid">
-                        <div class="impl"><a href="https://github.com/getspams/spams-python" target="_blank"><span class="impl-name">SPAMS</span></a> <span class="impl-info"><a href="https://lear.inrialpes.fr/people/mairal/" target="_blank">Mairal</a> &mdash; online</span><span class="stars">21</span> <a href="https://github.com/getspams/spams-python" target="_blank" class="tag py">Python</a> <a href="http://thoth.inrialpes.fr/people/mairal/spams/" target="_blank" class="tag mat">Matlab</a></div>
+                        <div class="impl"><a href="https://github.com/getspams/spams-python" target="_blank"><span class="impl-name">SPAMS</span></a> <span class="impl-info"><a href="https://lear.inrialpes.fr/people/mairal/" target="_blank">Mairal</a> &mdash; online</span><span class="stars">21</span> <a href="https://github.com/getspams/spams-python" target="_blank" class="tag py">Python</a> <a href="http://thoth.inrialpes.fr/people/mairal/spams/" target="_blank" class="tag mat">Matlab</a>
+                        <div class="impl"><a href="https://arxiv.org/abs/2308.13991" target="_blank"><span class="impl-name">JL-SPCADL</span></a> <span class="impl-info">G. Madhuri, Atul Negi, Kaluri V. Rangarao — Implementation of JLSPCADL: Johnson-Lindenstrauss lemma based optimal projections for discriminative dictionary learning with Modified Supervised PCA</span> <a href="https://github.com/IgorCarron/Algorithms/tree/master/JLSPCADL_arxiv_2308_13991" target="_blank" class="tag py">Python</a></div>
+                    </div>
                         <div class="impl"><a href="https://ieeexplore.ieee.org/document/1710377" target="_blank"><span class="impl-name">K-SVD</span></a> <span class="impl-info">Elad, Aharon 2006</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/0908.0050" target="_blank"><span class="impl-name">Online DL</span></a> <span class="impl-info">Mairal, Bach, Ponce, Sapiro ICML 2009</span></div>
                         <div class="impl"><a href="https://ieeexplore.ieee.org/document/6065289" target="_blank"><span class="impl-name">BPFA</span></a> <span class="impl-info">Zhou, Carin et al. &mdash; Beta Process</span></div>
@@ -1106,7 +1108,8 @@
                     <div class="impl-grid" style="margin-top:1rem">
                         <div class="impl"><a href="https://arxiv.org/abs/1410.1583" target="_blank"><span class="impl-name">Weighted Low-Rank</span></a> <span class="impl-info">Srebro, Jaakkola</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1802.06916" target="_blank"><span class="impl-name">Weighted MC</span></a> <span class="impl-info">heterogeneous noise</span></div>
-                    </div>
+                    
+                        <div class="impl"><a href="https://arxiv.org/abs/2510.25292" target="_blank"><span class="impl-name">Kronecker Product Factorization</span></a> <span class="impl-info">Yannis Voet, Leonardo De Novellis — Implementation of algorithms for identifying all possible Kronecker product factorizations of binary matrices, including decomposition graph visualization and applications to sparse matrix analysis.</span> <a href="https://github.com/IgorCarron/Algorithms/tree/master/Kronecker_Product_Factorization_arxiv_2510_25292" target="_blank" class="tag py">Python</a></div></div>
                 </div>
             </div>
         </section>
