--- a/index.html
+++ b/index.html
@@ -1108,8 +1108,7 @@
                     <div class="impl-grid" style="margin-top:1rem">
                         <div class="impl"><a href="https://arxiv.org/abs/1410.1583" target="_blank"><span class="impl-name">Weighted Low-Rank</span></a> <span class="impl-info">Srebro, Jaakkola</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1802.06916" target="_blank"><span class="impl-name">Weighted MC</span></a> <span class="impl-info">heterogeneous noise</span></div>
-                    
-                        <div class="impl"><a href="https://arxiv.org/abs/2510.25292" target="_blank"><span class="impl-name">Kronecker Product Factorization</span></a> <span class="impl-info">Yannis Voet, Leonardo De Novellis — Implementation of algorithms for identifying all possible Kronecker product factorizations of binary matrices, including decomposition graph visualization and applications to sparse matrix analysis.</span> <a href="https://github.com/IgorCarron/Algorithms/tree/master/Kronecker_Product_Factorization_arxiv_2510_25292" target="_blank" class="tag py">Python</a></div></div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -1148,6 +1147,7 @@
                         <div class="impl"><a href="https://doi.org/10.1186/s12859-019-2865-6" target="_blank"><span class="impl-name">MeDeCom</span></a> <span class="impl-info">DNA methylation deconvolution (Lutsik et al. 2017)</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/0712.4273" target="_blank"><span class="impl-name">Boolean MF</span></a> <span class="impl-info">Miettinen et al. 2008 &mdash; both factors binary</span></div>
                         <div class="impl"><a href="https://www.cs.rpi.edu/~zaki/PaperDir/SDM07.pdf" target="_blank"><span class="impl-name">PROXIMUS</span></a> <span class="impl-info">Koyut&uuml;rk, Grama &mdash; recursive binary partitioning</span></div>
+                        <div class="impl"><a href="https://arxiv.org/abs/2510.25292" target="_blank"><span class="impl-name">Kronecker Product Factorization</span></a> <span class="impl-info">Yannis Voet, Leonardo De Novellis — Implementation of algorithms for identifying all possible Kronecker product factorizations of binary matrices, including decomposition graph visualization and applications to sparse matrix analysis.</span> <a href="https://github.com/IgorCarron/Algorithms/tree/master/Kronecker_Product_Factorization_arxiv_2510_25292" target="_blank" class="tag py">Python</a></div>
                     </div>
                 </div>
             </div>
