Add Diff-OneBit (arXiv:2511.12471v1) to Matrix Factorization Jungle

--- a/index.html
+++ b/index.html
@@ -936,7 +936,8 @@
                         <div class="impl"><a href="https://github.com/NLPrinceton/sparse_recovery" target="_blank"><span class="impl-name">sparse_recovery</span></a> <span class="impl-info">BP, OMP, nonnegative variants</span> <a href="https://github.com/NLPrinceton/sparse_recovery" target="_blank" class="tag py">Python</a></div>
                         <div class="impl"><a href="https://github.com/NeuroFan/Compressive_Sensing_C_and_MATLAB" target="_blank"><span class="impl-name">CS C &amp; MATLAB</span></a> <span class="impl-info">OMP, AMP, IHT</span> <a href="https://github.com/NeuroFan/Compressive_Sensing_C_and_MATLAB" target="_blank" class="tag mat">Matlab</a> <a href="https://github.com/NeuroFan/Compressive_Sensing_C_and_MATLAB" target="_blank" class="tag cpp">C++</a></div>
                         <div class="impl"><a href="https://github.com/jianzhangcs/ISTA-Net-PyTorch" target="_blank"><span class="impl-name">ISTA-Net</span></a> <span class="impl-info">Deep unrolled ISTA (CVPR 2018)</span> <a href="https://github.com/jianzhangcs/ISTA-Net-PyTorch" target="_blank" class="tag py">Python</a></div>
-                    </div>
+                    
+                        <div class="impl"><a href="https://arxiv.org/abs/2511.12471v1" target="_blank"><span class="impl-name">Diff-OneBit</span></a> <span class="impl-info">Youming Chen, Zhaoqiang Liu — Implementation of Diff-OneBit algorithm for signal recovery under 1-bit quantization using diffusion model priors</span> <a href="https://github.com/IgorCarron/Algorithms/tree/master/Diff_OneBit_arxiv_2511_12471v1" target="_blank" class="tag py">Python</a></div></div>
                 </div>
                 <div style="display:grid; grid-template-columns: repeat(4, 1fr); gap:1rem; margin-top:1rem;">
                     <div class="cat-figure">
