--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,8 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1411.4357" target="_blank"><span class="impl-name">CountSketch</span></a> <span class="impl-info">Clarkson, Woodruff 2017</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1609.00048" target="_blank"><span class="impl-name">Sketching Survey</span></a> <span class="impl-info">Woodruff 2014</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2208.10578" target="_blank"><span class="impl-name">&tau;-GRA</span></a> <span class="impl-info">Pettie, Wang 2022 &mdash; HyperLogLog/PCSA estimators</span> <a href="https://github.com/IgorCarron/Algorithms/tree/master/Tau_GRA_Cardinality_Estimator_arxiv_2208_10578v1" target="_blank" class="tag py">Python</a></div>
-                    </div>
+                    
+                        <div class="impl"><a href="https://arxiv.org/abs/1205.2632v1" target="_blank"><span class="impl-name">Improved Compressed Counting</span></a> <span class="impl-info">Ping Li — Implementation of the optimal power estimator for Compressed Counting algorithm to estimate frequency moments and Shannon entropy of data streams</span> <a href="https://github.com/IgorCarron/Algorithms/tree/master/Improved_Compressed_Counting_arxiv_1205_2632v1" target="_blank" class="tag py">Python</a></div></div>
                 </div>
             </div>
         </section>
