Add LQ-LoRA (arXiv:2311.12023) to Matrix Factorization Jungle

--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,8 @@
                         <div class="impl"><a href="https://arxiv.org/abs/2403.03507" target="_blank"><span class="impl-name">GaLore</span></a> <span class="impl-info">gradient low-rank projection</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/2307.05695" target="_blank"><span class="impl-name">LoftQ</span></a> <span class="impl-info">quantization-aware LoRA init</span></div>
                         <div class="impl"><a href="https://github.com/microsoft/LoRA" target="_blank"><span class="impl-name">microsoft/LoRA</span></a> <span class="impl-info"><a href="https://www.microsoft.com/en-us/research/" target="_blank">Microsoft Research</a> &mdash; pip install loralib</span><span class="stars">13.1k</span> <a href="https://github.com/microsoft/LoRA" target="_blank" class="tag py">Python</a></div>
-                    </div>
+                    
+                        <div class="impl"><a href="https://arxiv.org/abs/2311.12023" target="_blank"><span class="impl-name">LQ-LoRA</span></a> <span class="impl-info">Han Guo, Philip Greengard, Eric P. Xing et al. — Paper: LQ-LoRA: Low-rank Plus Quantized Matrix Decomposition for Efficient Language Model Finetuning</span> <a href="https://arxiv.org/abs/2311.12023" target="_blank" class="tag py">Python</a></div></div>
                 </div>
             </div>
         </section>
