Add CERF (arXiv:1712.02527v1) to Matrix Factorization Jungle

--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,8 @@
                         <div class="impl"><a href="https://www.mlpack.org/papers/kpca.pdf" target="_blank"><span class="impl-name">Kernel PCA</span></a> <span class="impl-info">Sch&ouml;lkopf, Smola, M&uuml;ller 1998</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1408.3060" target="_blank"><span class="impl-name">FastFood</span></a> <span class="impl-info">Le, Sarlos, Smola 2013</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1605.07583" target="_blank"><span class="impl-name">Recursive Nystr&ouml;m</span></a> <span class="impl-info">Musco, Musco 2017</span></div>
-                    </div>
+                    
+                        <div class="impl"><a href="https://arxiv.org/abs/1712.02527v1" target="_blank"><span class="impl-name">CERF</span></a> <span class="impl-info"><a href="https://arxiv.org/search/?searchtype=author&query=Jianqiao%20Wangni" target="_blank">Jianqiao Wangni</a>, <a href="https://arxiv.org/search/?searchtype=author&query=Jingwei%20Zhuo" target="_blank">Jingwei Zhuo</a>, <a href="https://arxiv.org/search/?searchtype=author&query=Jun%20Zhu" target="_blank">Jun Zhu</a> — Paper: Learning Random Fourier Features by Hybrid Constrained Optimization</span> <span class="formula">$\phi_{\text{learner}}(x) = \underbrace{\Omega}_{	ext{mask/block struct.}} \underbrace{\phi_{\text{teacher}}(x)}_{	ext{known RFF}} \text{ where } \underbrace{\Omega}_{	ext{unknown}} \text{ is orthogonal transformation}$</span></div></div>
                 </div>
             </div>
         </section>
