Add GoDec Rust implementation and Rust tag styling

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
         .tag.r { background: #276dc3; color: white; }
         .tag.cpp { background: #00599c; color: white; }
         .tag.jl { background: #9558b2; color: white; }
+        .tag.rust { background: #dea584; color: #000; }
 
         .stars {
             font-size: 0.7rem;
@@ -868,6 +869,7 @@
                         <div class="impl"><a href="https://arxiv.org/abs/1009.5055" target="_blank"><span class="impl-name">ALM / IALM</span></a> <span class="impl-info">Lin, Chen, Ma 2010</span></div>
                         <div class="impl"><a href="https://web.stanford.edu/~boyd/papers/admm_distr_stats.html" target="_blank"><span class="impl-name">ADMM</span></a> <span class="impl-info">Boyd et al. &mdash; Alternating Direction</span></div>
                         <div class="impl"><a href="https://proceedings.mlr.press/v28/zhou13b.html" target="_blank"><span class="impl-name">GoDec</span></a> <span class="impl-info">Zhou, Tao ICML 2011 &mdash; randomized BRP</span></div>
+                        <div class="impl"><a href="https://github.com/IgorCarron/godec-rust" target="_blank"><span class="impl-name">GoDec (Rust)</span></a> <span class="impl-info">Rust implementation</span> <a href="https://github.com/IgorCarron/godec-rust" target="_blank" class="tag rust">Rust</a></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1109.0882" target="_blank"><span class="impl-name">DECOLOR</span></a> <span class="impl-info">Zhou, Yang, Yu &mdash; contiguous outliers</span></div>
                         <div class="impl"><a href="https://arxiv.org/abs/1106.3286" target="_blank"><span class="impl-name">ReProCS</span></a> <span class="impl-info">Qiu, Vaswani &mdash; recursive robust PCA</span></div>
                         <div class="impl"><a href="https://openaccess.thecvf.com/content_cvpr_2014/html/Hauberg_Grassmann_Averages_for_2014_CVPR_paper.html" target="_blank"><span class="impl-name">TGA</span></a> <span class="impl-info">Hauberg et al. CVPR 2014 &mdash; Grassmann averages</span></div>
